crates/core/tests/integration/language/typescript/snapshots/integration_tests__integration__language__typescript__arrow_function_parameter_dependency_ir.snap
---
source: crates/core/tests/integration/language/typescript/mod.rs
expression: ir_snapshot_content
---
Source Code:
const a = (b: string) => {
    console.log(b);
}

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "a")
      value: (arrow_function
        parameters: (formal_parameters
          (required_parameter
            pattern: (identifier "b")
            type: (type_annotation
              (predefined_type "string")
            )
          )
        )
        body: (statement_block
          (expression_statement
            (call_expression
              function: (member_expression
                object: (identifier "console")
                property: (property_identifier "log")
              )
              arguments: (arguments
                (identifier "b")
              )
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/typescript/fixtures/arrow_function_parameter_dependency.ts",
    definitions: [
        Definition { position: { 1:7 to 1:8 }, name: "a", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:12 to 1:13 }, name: "b", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [
        Dependency { source_line: 2, target_line: 1, symbol: "b", dependency_type: VariableUse, context: Some("Identifier:2:17") },
    ],
    usage: [
        Usage { position: { 2:5 to 2:12 }, name: "console", kind: Identifier, context: Some("call_expression") },
        Usage { position: { 2:13 to 2:16 }, name: "log", kind: FieldExpression, context: None },
        Usage { position: { 2:17 to 2:18 }, name: "b", kind: Identifier, context: Some("call_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 3,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
