crates/core/tests/integration/language/typescript/snapshots/integration_tests__integration__language__typescript__function_parameter_dependency_ir.snap
---
source: crates/core/tests/integration/language/typescript/mod.rs
expression: ir_snapshot_content
---
Source Code:
function a(b: string) {
  console.log(b);
}

AST:
(program
  (function_declaration
    name: (identifier "a")
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier "b")
        type: (type_annotation
          (predefined_type "string")
        )
      )
    )
    body: (statement_block
      (expression_statement
        (call_expression
          function: (member_expression
            object: (identifier "console")
            property: (property_identifier "log")
          )
          arguments: (arguments
            (identifier "b")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/typescript/fixtures/function_parameter_dependency.ts",
    definitions: [
        Definition { position: { 1:10 to 1:11 }, name: "a", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:12 to 1:13 }, name: "b", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [
        Dependency { source_line: 2, target_line: 1, symbol: "b", dependency_type: VariableUse, context: Some("Identifier:2:15") },
    ],
    usage: [
        Usage { position: { 2:3 to 2:10 }, name: "console", kind: Identifier, context: Some("call_expression") },
        Usage { position: { 2:11 to 2:14 }, name: "log", kind: FieldExpression, context: None },
        Usage { position: { 2:15 to 2:16 }, name: "b", kind: Identifier, context: Some("call_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 3,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
