crates/core/tests/integration/language/typescript/snapshots/integration_tests__integration__language__typescript__hoisting_test_metrics.snap
---
source: crates/core/tests/integration/language/typescript/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/typescript/fixtures/hoisting_test.ts",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.16666666666666666,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        11
      ]
    },
    {
      "line_number": 6,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.020833333333333332,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        7
      ]
    },
    {
      "line_number": 17,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0625,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        20
      ]
    },
    {
      "line_number": 26,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0625,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        29
      ]
    },
    {
      "line_number": 34,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.08333333333333333,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        38
      ]
    },
    {
      "line_number": 42,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.14583333333333331,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        46,
        45
      ]
    }
  ],
  "overall_complexity_score": 14.454166666666667
}
