crates/core/tests/integration/language/typescript/snapshots/integration_tests__integration__language__typescript__import_dependency_ir.snap
---
source: crates/core/tests/integration/language/typescript/mod.rs
expression: ir_snapshot_content
---
Source Code:
import { someFunction } from './module';
const result = someFunction();

AST:
(program
  (import_statement
    (import_clause
      (named_imports
        (import_specifier
          name: (identifier "someFunction")
        )
      )
    )
    source: (string
      (string_fragment)
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "result")
      value: (call_expression
        function: (identifier "someFunction")
        arguments: (arguments)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/typescript/fixtures/import_dependency.ts",
    definitions: [
        Definition {
            name: "someFunction",
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 22,
            },
            definition_type: ImportDefinition,
        },
        Definition {
            name: "result",
            position: Position {
                start_line: 2,
                start_column: 7,
                end_line: 2,
                end_column: 13,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [
        Dependency {
            source_line: 2,
            target_line: 1,
            symbol: "someFunction",
            dependency_type: FunctionCall,
            context: Some(
                "CallExpression:2:16",
            ),
        },
    ],
    usage: [
        Usage {
            name: "someFunction",
            kind: CallExpression,
            position: Position {
                start_line: 2,
                start_column: 16,
                end_line: 2,
                end_column: 30,
            },
            context: Some(
                "call_expression",
            ),
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 2,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
